--- a/bai-1-create-app/package.json
+++ b/bai-1-create-app/package.json
@@ -12,6 +12,8 @@
     "axios": "^0.26.1",
     "bootstrap": "^5.1.3",
     "classnames": "^2.3.1",
+    "firebase": "^9.6.10",
+    "node-sass": "^7.0.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-redux": "^7.2.6",
@@ -20,7 +22,8 @@
     "redux": "^4.1.2",
     "redux-thunk": "^2.4.1",
     "uuid": "^8.3.2",
-    "web-vitals": "^2.1.4"
+    "web-vitals": "^2.1.4",
+    "redux-logger": "^3.0.6"
   },
   "scripts": {
     "start": "react-scripts start",
